correct way of showing gallery errors (#3360)
* correct way of showing gallery errors

* fix formatting

* placeholder for showing Gallery errors

* no fake sort timestamp, show media in place

* refactor: aways show the same elements for a gallery tab
and move error display to those elements

* rm non working options from getBrokenMediaContextMenu

* add context menu option to delete media-messages from gallery

"delete message from gallery" was mentioned in https://github.com/deltachat/interface/issues/39

* remove load error from getting displayed

because it is too large to be displayed

* fix all attachments get displayed as images

* make errors visually fit in

---------

--- a/scss/gallery/_media-attachment.scss
+++ b/scss/gallery/_media-attachment.scss
@@ -71,6 +71,12 @@
       color: grey;
     }
   }
+
+  &.broken {
+    .name {
+      color: var(--colorDanger);
+    }
+  }
 }
 
 .media-attachment-generic {
@@ -145,6 +151,16 @@
       margin-top: 3px;
     }
   }
+
+  &.broken {
+    & > .file-icon {
+      cursor: unset;
+    }
+    .name,
+    .file-extension {
+      color: var(--colorDanger);
+    }
+  }
 }
 
 .media-attachment-webxdc {
@@ -193,6 +209,15 @@
       user-select: text;
       position: relative;
       word-break: break-all;
+    }
+  }
+
+  &.broken {
+    & > .icon {
+      background-color: var(--colorDanger);
+    }
+    .name {
+      color: var(--colorDanger);
     }
   }
 }
